etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Fri Dec 15 18:42:17 2017
*filter
:INPUT ACCEPT [243:27412]
:FORWARD ACCEPT [940:390412]
:OUTPUT ACCEPT [155:14865]
-A FORWARD -m mark --mark 0x1 -j DROP
-A FORWARD -d 192.168.2.0/24 -i wlan0 -o eth0 -j DROP
COMMIT
# Completed on Fri Dec 15 18:42:17 2017
# Generated by iptables-save v1.4.21 on Fri Dec 15 18:42:17 2017
*mangle
:PREROUTING ACCEPT [14058:4670170]
:INPUT ACCEPT [4826:706667]
:FORWARD ACCEPT [9024:3949085]
:OUTPUT ACCEPT [3610:679917]
:POSTROUTING ACCEPT [12786:4665137]
-A PREROUTING -i wlan0 -m mark --mark 0x0 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -i wlan0 -m mark --mark 0x0 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -i wlan0 -m mark --mark 0x0 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -m mac --mac-source 78:F8:82:D0:76:FB -j MARK --set-xmark 0x2/0xffffffff
COMMIT
# Completed on Fri Dec 15 18:42:17 2017
# Generated by iptables-save v1.4.21 on Fri Dec 15 18:42:17 2017
*nat
:PREROUTING ACCEPT [1898:184313]
:INPUT ACCEPT [1235:106932]
:OUTPUT ACCEPT [863:72613]
:POSTROUTING ACCEPT [863:72613]
-A PREROUTING -i wlan0 -p tcp -m mark --mark 0x1 -m tcp --dport 80 -j DNAT --to-destination 192.168.255.1
-A PREROUTING -i wlan0 -p tcp -m mark --mark 0x1 -m tcp --dport 443 -j DNAT --to-destination 192.168.255.1
-A POSTROUTING -o eth0 -m mark --mark 0x2 -j MASQUERADE
COMMIT
# Completed on Fri Dec 15 18:42:17 2017
